fix overlap of course description and edit button

--- a/app/assets/stylesheets/modules/_overview.styl
+++ b/app/assets/stylesheets/modules/_overview.styl
@@ -9,7 +9,12 @@
     +above(desktop)
       col(1/3)
   .section-header
+    display flex
     margin-bottom 8px
+
+    .controls
+      position relative
+      flex 1 0 auto
 
 .milestones
   .module__data
